--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <article class="articulo">
                 <img class="img-masleidos" src="img/castilloespaña.jpg" alt="Castillo" height="200px" width="auto">
                 <h3>Los castillos mas espectaculares de España</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p>Lorem Ipsum is sssimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </article>
                 <article class="articulo">
                 <img class="img-masleidos" src="img/comidachina.jpg" alt="ComidaChina" height="200px" width="auto">
