--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,61 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes somos</title>
-    <link rel="stylesheet" href="../ccs/styles.css">
+    <title>Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../ccs/styles.css">
 </head>
 <body>
     <header>
-        <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño">
-        <nav>
-            <ul>
-                <li><a href="../index.html" class="menu-list">Home</a></li>
-                <li><a href="destinos.html" class="menu-list">Destinos</a></li>
-                <li><a href="#" class="menu-list">Blog</a></li>
-                <li><a href="quienes-somos.html" class="menu-list">Quienes somos</a></li>
-                <li><a href="contacto.html" class="menu-list">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"> <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="destinos.html">Destinos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
         </nav>
     </header>
     <div class="web-background">
-        <section class="mas-leidos">
+        <div class="container">
             <h2>BLOG</h2>
-            <article class="articulo">
-                <img class= "img-masleidos" src="../img/castilloespaña.jpg" alt="Castillo" height="200px" width="auto">
-                <h3>Los castillos mas espectaculares de España</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </article>
-            <article class="articulo">
-                <img class= "img-masleidos" src="../img/comidachina.jpg" alt="ComidaChina" height="200px" width="auto">
-                <h3>Comidas tipicas chinas</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </article>
-            <article class="articulo">
-                <img class= "img-masleidos" src="../img/playaparadisiaca.jpg" alt="Playa" height="200px" width="auto">
-                <h3>10 playas paradisiacas mas visitadas</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </article>
-            <article class="articulo">
-                <img class= "img-masleidos" src="../img/castilloespaña.jpg" alt="Castillo" height="200px" width="auto">
-                <h3>Los castillos mas espectaculares de España</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </article>
-            <article class="articulo">
-                <img class= "img-masleidos" src="../img/comidachina.jpg" alt="ComidaChina" height="200px" width="auto">
-                <h3>Comidas tipicas chinas</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </article>
-            <article class="articulo">
-                <img class= "img-masleidos" src="../img/playaparadisiaca.jpg" alt="Playa" height="200px" width="auto">
-                <h3>10 playas paradisiacas mas visitadas</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            </article>
-    </section>
-        <br>
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/nieve.jpg" class="card-img-top" alt="pirineos">
+                    <div class="card-body">
+                      <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
+                      <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/bosque.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
+                      <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/paraiso.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
+                      <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col">
+                  <div class="card" style="width: 18rem;">
+                      <img src="../img/castilloespaña.jpg" class="card-img-top" alt="Castillos españa">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">Los castillos mas espectaculares de España</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col">
+                  <div class="card" style="width: 18rem;">
+                      <img src="../img/comidachina.jpg" class="card-img-top" alt="Comidachina">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">Comidas tipicas chinas</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col">
+                  <div class="card" style="width: 18rem;">
+                      <img src="../img/playaparadisiaca.jpg" class="card-img-top" alt="playaparadisiaca">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">10 playas paradisiacas mas visitadas</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                      </div>
+                    </div>
+                </div>
+              </div>
+        </div>
     </div>
 <footer>
     <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
@@ -69,5 +115,6 @@
     <br>
     &copy; Todos los derechos reservados
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
