--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,10 +43,10 @@
             </div>
           </nav>
     </header>
-    <div class="web-background">
+    <div class="web-background mas-leidos">
         <h2>Contacto</h2>
-        <section class="container form-styles"> 
-            <div class="col-6">
+        <div class="row container form-styles"> 
+            <div class="col-sm-12 col-md-12 col-lg-6">
                 <div class="mb-3"> 
                     <label for="exampleFormControlInput1" class="form-label">Nombre y apellido</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese nombre y apellido">
@@ -60,10 +60,10 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Ingrese su mensaje" rows="3"></textarea>
                 </div>
             </div>
-            <div class="col-6 mapa">
+            <div class="col-sm-12 col-md-12 col-lg-6 mapa">
                 <img src="../img/mapa.jpg" alt="mapa">
             </div>
-        </section>
+        </div>
         <br>
     </div>
 <footer>
