--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -43,46 +43,42 @@
           </nav>
     </header>
     <div class="web-background">
-        <section class="destinos">
-            <h2 class="titulo-destinos">Destinos populares</h2>
-            <div class="destinosPopulares amsterdam">
-                <h3>Amsterdang</h3>
+        <div class="container destinos">
+            <h2>Destinos populares</h2>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares amsterdam">
+                        <h3>Amsterdam</h3>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares mexico">
+                        <h3><h3>Mexico</h3></h3>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares new-york">
+                        <h3>New York</h3>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares republica-dominicana">
+                        <h3>Cuba</h3>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares tailandia">
+                        <h3><h3>Tailandia</h3></h3>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares japon">
+                        <h3>Japon</h3>
+                    </div>
+                </div>
+               
             </div>
-            <div class="destinosPopulares mexico">
-                <h3>Mexico</h3>
-            </div>
-            <div class="destinosPopulares new-york">
-                <h3>New York</h3>
-            </div>
-            <div class="destinosPopulares republica-dominicana">
-                <h3>Republica dominicana</h3>
-            </div>
-            <div class="destinosPopulares tailandia">
-                <h3>Tailandia</h3>
-            </div>
-            <div class="destinosPopulares japon">
-                <h3>Japon</h3>
-            </div>
-            <div class="destinosPopulares amsterdam">
-                <h3>Amsterdang</h3>
-            </div>
-            <div class="destinosPopulares mexico">
-                <h3>Mexico</h3>
-            </div>
-            <div class="destinosPopulares new-york">
-                <h3>New York</h3>
-            </div>
-            <div class="destinosPopulares republica-dominicana">
-                <h3>Republica dominicana</h3>
-            </div>
-            <div class="destinosPopulares tailandia">
-                <h3>Tailandia</h3>
-            </div>
-            <div class="destinosPopulares japon">
-                <h3>Japon</h3>
-            </div>
-        </section>
-        <br>
+          </div>
     </div>
 <footer>
     <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
