--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -42,7 +42,7 @@
             </div>
           </nav>
     </header>
-    <div class="web-background">
+    <div class="web-background container mas-leidos">
         <section>
             <h2>¿Quienes somos?</h2>
             <img src="" alt="">
