--- a/index.html
+++ b/index.html
@@ -47,29 +47,29 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="carousel-caption d-none d-md-block">
-                <h3>First slide label</h3>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h1>TURISMO</h1>
+                <h4>Conoce el lugar antes de llegar</h4>
             </div>
             <img src="img/back-home-1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <div class="carousel-caption d-none d-md-block">
-                <h3>First slide label</h3>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h1>TURISMO</h1>
+                <h4>Conoce el lugar antes de llegar</h4>
             </div>
             <img src="img/back-home-2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <div class="carousel-caption d-none d-md-block">
-                <h3>First slide label</h3>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h1>TURISMO</h1>
+                <h4>Conoce el lugar antes de llegar</h4>
             </div>
             <img src="img/back-home-3.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <div class="carousel-caption d-none d-md-block">
-                <h3>First slide label</h3>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h1>TURISMO</h1>
+                <h4>Conoce el lugar antes de llegar</h4>
             </div>
             <img src="img/back-home-4.png" class="d-block w-100" alt="...">
           </div>
@@ -89,58 +89,74 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <div class="web-background container">
-        <section class="destinos">
-            <h2 class="titulo-destinos">Destinos populares</h2>
-                <div class="destinosPopulares amsterdam">
-                    <h3>Amsterdang</h3>
+    <div class="web-background">
+        <div class="container destinos">
+            <h2>Destinos populares</h2>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares amsterdam">
+                        <h3>Amsterdam</h3>
+                    </div>
                 </div>
-                <div class="destinosPopulares mexico">
-                    <h3>Mexico</h3>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares mexico">
+                        <h3><h3>Mexico</h3></h3>
+                    </div>
                 </div>
-                <div class="destinosPopulares new-york">
-                    <h3>New York</h3>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares new-york">
+                        <h3>New York</h3>
+                    </div>
                 </div>
-                <div class="destinosPopulares republica-dominicana">
-                    <h3>Republica dominicana</h3>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares republica-dominicana">
+                        <h3>Cuba</h3>
+                    </div>
                 </div>
-                <div class="destinosPopulares tailandia">
-                    <h3>Tailandia</h3>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares tailandia">
+                        <h3><h3>Tailandia</h3></h3>
+                    </div>
                 </div>
-                <div class="destinosPopulares japon">
-                    <h3>Japon</h3>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="destinosPopulares japon">
+                        <h3>Japon</h3>
+                    </div>
                 </div>
-        </section>
-        <div class="container">
+               
+            </div>
+          </div>
+       
+        <div class="container mas-leidos">
             <h2>Más Leídos</h2>
             <div class="row">
-              <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/nieve.jpg" class="card-img-top" alt="pirineos">
-                    <div class="card-body">
-                      <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
-                      <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                  <div class="card" >
+                      <img src="img/nieve.jpg" class="card-img-top" alt="pirineos">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
+                        <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
+                      </div>
                     </div>
-                  </div>
-              </div>
-              <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/bosque.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
-                      <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                  <div class="card" >
+                      <img src="img/bosque.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
+                        <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
+                      </div>
                     </div>
-                  </div>
-              </div>
-              <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="img/paraiso.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
-                      <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                  <div class="card" >
+                      <img src="img/paraiso.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
+                        <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
+                      </div>
                     </div>
-                  </div>
-              </div>
+                </div>
             </div>
             <br>
         </div>
