--- a/pages/blog.html
+++ b/pages/blog.html
@@ -42,12 +42,12 @@
             </div>
         </nav>
     </header>
-    <div class="web-background">
-        <div class="container">
+
+        <div class="container mas-leidos">
             <h2>BLOG</h2>
             <div class="row">
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card" >
                     <img src="../img/nieve.jpg" class="card-img-top" alt="pirineos">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
@@ -55,8 +55,8 @@
                     </div>
                   </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card" >
                     <img src="../img/bosque.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
@@ -64,8 +64,8 @@
                     </div>
                   </div>
               </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card" >
                     <img src="../img/paraiso.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
@@ -76,8 +76,8 @@
             </div>
             <br>
             <div class="row">
-                <div class="col">
-                  <div class="card" style="width: 18rem;">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                  <div class="card" >
                       <img src="../img/castilloespaña.jpg" class="card-img-top" alt="Castillos españa">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Los castillos mas espectaculares de España</h5>
@@ -85,8 +85,8 @@
                     </div>
                 </div>
                 </div>
-                <div class="col">
-                  <div class="card" style="width: 18rem;">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                  <div class="card" >
                       <img src="../img/comidachina.jpg" class="card-img-top" alt="Comidachina">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Comidas tipicas chinas</h5>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col">
-                  <div class="card" style="width: 18rem;">
+                  <div class="card">
                       <img src="../img/playaparadisiaca.jpg" class="card-img-top" alt="playaparadisiaca">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">10 playas paradisiacas mas visitadas</h5>
@@ -105,7 +105,6 @@
                 </div>
               </div>
         </div>
-    </div>
 <footer>
     <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
     <img src="../img/gmail.png" class="footer-img"alt="gmail" >
