--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="ccs/styles.css">
+    <link rel="stylesheet" href="ccs/style.css">
 </head>
 <body>
     <header>
@@ -95,32 +95,32 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares amsterdam">
-                        <h3>Amsterdam</h3>
+                        <h3><a href="">Asterdam</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares mexico">
-                        <h3><h3>Mexico</h3></h3>
+                        <h3> <a href="pages/destino-mexico.html">Mexico</a> </h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares new-york">
-                        <h3>New York</h3>
+                        <h3><a href="pages/destino-new-york.html">New York</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares republica-dominicana">
-                        <h3>Cuba</h3>
+                        <h3><a href="pages/destino-cuba.html">Cuba</a> </h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares tailandia">
-                        <h3><h3>Tailandia</h3></h3>
+                        <h3><a href="pages/destino-tailandia.html">Tailandia</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares japon">
-                        <h3>Japon</h3>
+                        <h3><a href="pages/destino-japon.html">Japon</a></h3>
                     </div>
                 </div>
                
