--- a/pages/destino-tailandia.html
+++ b/pages/destino-tailandia.html
@@ -43,51 +43,65 @@
             </div>
           </nav>
     </header>
-    <div class="web-background mas-leidos pag-mexico">
+    <div class="web-background mas-leidos pag-tailandia">
         <div class="img-principal "></div>
-        <h2>Bienvenidos a Tailandia</h2>
-<p> Acogedora y festiva, culta e histórica, Tailandia ofrece mil atractivos, desde llamativos templos y playas tropicales hasta la siempre reconfortante sonrisa de su gente.</p>
-
-<h4>Arena entre los dedos</h4>
-<p>Con su largo litoral (en verdad dos) y unas islas de corazón selvático fondeadas entre aguas azul celeste, Tailandia es la escapada tropical ideal tanto para los hedonistas como para los eremitas, tanto para los príncipes como para los mendigos. Su oferta lúdica es realmente variada: surf en Ko Lipe, tiburones ballena en Ko Tao, acantilados en Krabi, kiteboard en Hua Hin, fiesta en Ko Phi-Phi, spas en Ko Samui y ambiente playero por doquier.</p>
-
-<h4>Una mesa abundante</h4>
-<p>Alabada en todo el mundo, la cocina tailandesa refleja los aspectos fundamentales de la cultura del país: generosidad, calidez, frescura e informalidad. Los platos se elaboran con ingredientes autóctonos, desde el penetrante limoncillo y los ardientes chiles hasta el gustoso marisco, y combinan cuatro sabores básicos (picante, dulce, salado y agrio), todo ello disponible en los puestos de fideos de Bangkok, las marisquerías de Phuket y los tenderetes de cocina birmana de los mercados de Mae Sot, entre otros lugares. Los cursos de cocina revelan la sencillez y la historia de unas recetas a primera vista complicadas.</p>
-
-<h4>Espacios sagrados</h4>
-<p>Los relucientes templos y budas dorados enmarcan tanto los entornos rústicos como los modernos. Las ancestrales higueras de Bengala se visten ceremoniosamente con telas sagradas para honrar a los espíritus residentes, pequeños altares adornan y protegen desde los hogares más humildes hasta los grandes centros comerciales, y las guirnaldas en los salpicaderos de los vehículos salvaguardan a sus ocupantes de los accidentes de tráfico. Luego están los retiros de meditación de Chiang Mai, las fiestas religiosas del noreste, las cuevas-santuario de Kanchanaburi y Phetchaburi, y los templos cimeros del norte.</p>
-
-<h4>Campos y junglas</h4>
-<p>Entre las abarrotadas ciudades y los pueblos palpita un corazón rural de arrozales, selvas tropicales y aldeas achaparradas que se rigen por el reloj agrícola. En el norte, en medio de la fronda y el campo despuntan afiladas montañas azules con cascadas de aguas plateadas. Al sur, entre los cultivos se alzan escarpados peñones calizos cual rascacielos prehistóricos. Durante la estación de lluvias, el noreste (normalmente árido) deslumbra con los tonos esmeralda de los tiernos brotes del arroz que alfombran el territorio.</p>
-
-<h4>Cuándo ir a Tailandia</h4>
-
-<p>Mejor época para viajar a Tailandia
-Temporada alta (nov-mar)
-Navidad y Año Nuevo son las épocas más turísticas y caras.
-Temporada media (abr-jun, sep y oct)
-El norte y la costa del golfo son ideales en septiembre y octubre.
-Temporada baja (jul-oct)
-Algunas islas cierran y, según el tiempo, circulan menos barcos; se recomienda cierto margen de maniobra.
-Clima en Tailandia
-Noviembre-marzo
-Tras el monzón empieza una época fresca y seca, el paisaje luce radiante y las temperaturas son agradables.
-Abril-junio
-De abril a junio suele ser muy caluroso y seco, con 30°C de temperatura media en Bangkok. En la costa, la brisa marina alivia el bochorno.
-Julio-octubre
-El monzón acarrea desde chaparrones vespertinos hasta grandes inundaciones.</p>
-
-<h2>Lo imprescindible</h2>
-
-<h4>Bangkok</h4>
-<p>Templos relucientes, rascacielos vertiginosos, vida nocturna y excelente comida. ¿Cómo puede no gustar Bangkok ? Atascos de tráfico, humedad e inestabilidad política aparte, la capital del país está mejor organizada y es más transitable que nunca. Es fácil y rápido llegar a santuarios, mercados, centros comerciales y museos, además de reponer fuerzas en los puestos callejeros y en algunos de los mejores restaurantes de toda Asia. La primera noche, se recomienda subir a alguno de sus famosos bares de azotea, tanto para orientarse como para intuir esta convulsa y centelleante ciudad.</p>
-
-<h4>Ghiang Mai</h4>
-<p>La capital cultural del norte hará las delicias de los amantes del arte y los templos, y es ideal para las familias. El casco antiguo está lleno de templos de la época del reino Lanna y sinuosos callejones que se descubren mejor en bicicleta. Las escuelas desvelan los secretos de la cocina tailandesa, mientras que el pintoresco campo circundante depara excursiones por la selva, encuentros con elefantes y aldeas de minorías étnicas. El sushi japonés, los curris birmanos, las especialidades del norte y la comida vegetariana engrosan la formidable oferta culinaria de esta urbe. Los alrededores también son ricos en artesanías tradicionales.</p>
-
-<h4>Railay</h4>
-<p>La punta de la península de Krabi atesora una de las formaciones naturales más famosas de Tailandia: las rocas kársticas de Railay, que emergen directamente del océano. Las playas relucen con su arena blanca como el azúcar y en las selvas del interior el único tráfico es el pedestre. Sin automóviles, no hay atascos ni problemas de transporte. Los visitantes van y vienen en largos barcos de popa larga. Este es un buen lugar para bañarse, descansar, practicar submarinismo o escalar en roca. Se puede aprender lo básico en escalada, o quedarse lo suficiente para coronar por libre un pináculo.</p>
+        <div class="div-tailandia">
+        <div class="principal-tailandia">
         
+        <h2>Bienvenidos a Tailandia</h2>
+
+        <p> Acogedora y festiva, culta e histórica, Tailandia ofrece mil atractivos, desde llamativos templos y playas tropicales hasta la siempre reconfortante sonrisa de su gente.</p>
+
+        <h4>Arena entre los dedos</h4>
+        <p>Con su largo litoral (en verdad dos) y unas islas de corazón selvático fondeadas entre aguas azul celeste, Tailandia es la escapada tropical ideal tanto para los hedonistas como para los eremitas, tanto para los príncipes como para los mendigos. Su oferta lúdica es realmente variada: surf en Ko Lipe, tiburones ballena en Ko Tao, acantilados en Krabi, kiteboard en Hua Hin, fiesta en Ko Phi-Phi, spas en Ko Samui y ambiente playero por doquier.</p>
+
+        <h4>Una mesa abundante</h4>
+        <p>Alabada en todo el mundo, la cocina tailandesa refleja los aspectos fundamentales de la cultura del país: generosidad, calidez, frescura e informalidad. Los platos se elaboran con ingredientes autóctonos, desde el penetrante limoncillo y los ardientes chiles hasta el gustoso marisco, y combinan cuatro sabores básicos (picante, dulce, salado y agrio), todo ello disponible en los puestos de fideos de Bangkok, las marisquerías de Phuket y los tenderetes de cocina birmana de los mercados de Mae Sot, entre otros lugares. Los cursos de cocina revelan la sencillez y la historia de unas recetas a primera vista complicadas.</p>
+
+        <h4>Espacios sagrados</h4>
+        <p>Los relucientes templos y budas dorados enmarcan tanto los entornos rústicos como los modernos. Las ancestrales higueras de Bengala se visten ceremoniosamente con telas sagradas para honrar a los espíritus residentes, pequeños altares adornan y protegen desde los hogares más humildes hasta los grandes centros comerciales, y las guirnaldas en los salpicaderos de los vehículos salvaguardan a sus ocupantes de los accidentes de tráfico. Luego están los retiros de meditación de Chiang Mai, las fiestas religiosas del noreste, las cuevas-santuario de Kanchanaburi y Phetchaburi, y los templos cimeros del norte.</p>
+
+        <h4>Campos y junglas</h4>
+        <p>Entre las abarrotadas ciudades y los pueblos palpita un corazón rural de arrozales, selvas tropicales y aldeas achaparradas que se rigen por el reloj agrícola. En el norte, en medio de la fronda y el campo despuntan afiladas montañas azules con cascadas de aguas plateadas. Al sur, entre los cultivos se alzan escarpados peñones calizos cual rascacielos prehistóricos. Durante la estación de lluvias, el noreste (normalmente árido) deslumbra con los tonos esmeralda de los tiernos brotes del arroz que alfombran el territorio.</p>
+
+        <h3>Cuándo ir a Tailandia</h3>
+        <div class="row"> 
+          <div class="col-lg-6">  
+          <h4>Mejor época para viajar a Tailandia</h4>
+          <p></p> Temporada alta (nov-mar)
+          Navidad y Año Nuevo son las épocas más turísticas y caras.
+          Temporada media (abr-jun, sep y oct)
+          El norte y la costa del golfo son ideales en septiembre y octubre.
+          Temporada baja (jul-oct)
+          Algunas islas cierran y, según el tiempo, circulan menos barcos; se recomienda cierto margen de maniobra.
+          </div>
+          <div class="col-lg-6">
+          <h4> Clima en Tailandia</h4>
+          Noviembre-marzo
+          Tras el monzón empieza una época fresca y seca, el paisaje luce radiante y las temperaturas son agradables.
+          Abril-junio
+          De abril a junio suele ser muy caluroso y seco, con 30°C de temperatura media en Bangkok. En la costa, la brisa marina alivia el bochorno.
+          Julio-octubre
+          El monzón acarrea desde chaparrones vespertinos hasta grandes inundaciones.</p>
+          </div>
+        </div>
+
+        <h3>Lo imprescindible</h3>
+        <div class="row">
+          <div class="col-lg-4"> 
+          <h4>Bangkok</h4>
+          <p>Templos relucientes, rascacielos vertiginosos, vida nocturna y excelente comida. ¿Cómo puede no gustar Bangkok ? Atascos de tráfico, humedad e inestabilidad política aparte, la capital del país está mejor organizada y es más transitable que nunca. Es fácil y rápido llegar a santuarios, mercados, centros comerciales y museos, además de reponer fuerzas en los puestos callejeros y en algunos de los mejores restaurantes de toda Asia. La primera noche, se recomienda subir a alguno de sus famosos bares de azotea, tanto para orientarse como para intuir esta convulsa y centelleante ciudad.</p>
+          </div>
+          <div class="col-lg-4">
+          <h4>Ghiang Mai</h4>
+          <p>La capital cultural del norte hará las delicias de los amantes del arte y los templos, y es ideal para las familias. El casco antiguo está lleno de templos de la época del reino Lanna y sinuosos callejones que se descubren mejor en bicicleta. Las escuelas desvelan los secretos de la cocina tailandesa, mientras que el pintoresco campo circundante depara excursiones por la selva, encuentros con elefantes y aldeas de minorías étnicas. El sushi japonés, los curris birmanos, las especialidades del norte y la comida vegetariana engrosan la formidable oferta culinaria de esta urbe. Los alrededores también son ricos en artesanías tradicionales.</p>
+          </div>
+          <div class="col-lg-4">
+          <h4>Railay</h4>
+          <p>La punta de la península de Krabi atesora una de las formaciones naturales más famosas de Tailandia: las rocas kársticas de Railay, que emergen directamente del océano. Las playas relucen con su arena blanca como el azúcar y en las selvas del interior el único tráfico es el pedestre. Sin automóviles, no hay atascos ni problemas de transporte. Los visitantes van y vienen en largos barcos de popa larga. Este es un buen lugar para bañarse, descansar, practicar submarinismo o escalar en roca. Se puede aprender lo básico en escalada, o quedarse lo suficiente para coronar por libre un pináculo.</p>
+          </div> 
+       </div>
+      </div>
     </div>
 <footer>
     <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
