--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares amsterdam">
-                        <h3><a href="">Asterdam</a></h3>
+                        <h3><a href="pages/destino-amsterdam.html">Asterdam</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
